Archive2/a3/9fc13e656549ce/output
main.cpp:2:22: error: use of undeclared identifier 'std'
T&& forward(typename std::remove_reference<T>::type&& t)
                     ^
main.cpp:2:27: error: expected a qualified name after 'typename'
T&& forward(typename std::remove_reference<T>::type&& t)
                          ^
main.cpp:2:22: error: use of undeclared identifier 'std'
T&& forward(typename std::remove_reference<T>::type&& t)
                     ^
main.cpp:2:27: error: expected a qualified name after 'typename'
T&& forward(typename std::remove_reference<T>::type&& t)
                          ^
main.cpp:2:43: error: expected ')'
T&& forward(typename std::remove_reference<T>::type&& t)
                                          ^
main.cpp:2:12: note: to match this '('
T&& forward(typename std::remove_reference<T>::type&& t)
           ^
main.cpp:4:29: error: use of undeclared identifier 't'
    return static_cast<T&&>(t);
                            ^
6 errors generated.
